# py-profinet

./: default.nix  flake.nix  main.py  pyproject.toml
helper/: gsdml_parser.py
messages/: sim_pnio_cm.py
pnio/: config.py  controller.py  gsdml.py  pnio.py  pnio2mqtt.py  pnio_rpc.py  rpc.py  rt.py
pnio_connection/: automaton.py  config.py  connection.py  gsdml.py  pnio.py  pnio_dcp.py  pnio_rpc.py
