[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "py-profinet"
description = "Profinet Controller implemented in Python"
version = "0.0.1"
authors = [
 { name = "Quentin Smith", email = "quentin@mit.edu" },
]
license = { file = "COPYING" }
classifiers = [
 "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)"
]
requires-python = ">=3.11"
dependencies = [
 "scapy",
 "pyyaml",
 "aiomqtt",
 "async-timeout",
 "structlog",
 "influxdb_client[async]",
 "Pint",
 "aiohttp-retry",
]

[project.scripts]
pnio2mqtt = "pnio2mqtt:main"

[tool.flit.module]
name = "pnio"
